--- a/src/pages/YoutubeDisplayer/YoutubeDisplayer.css
+++ b/src/pages/YoutubeDisplayer/YoutubeDisplayer.css
@@ -1,10 +1,42 @@
+h1 {
+  font-size: 1em;
+}
 .container {
   width: 80vw;
   height: 80vh;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 2fr 8fr;
+}
+/* FORM */
+
+.form-container {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.form-container-title {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.form-container-form {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.form-container-form form {
+  width: 100%;
 }
 
 .text {
   display: flex;
+  height: 80px;
 }
 
 .input {
@@ -12,7 +44,7 @@
   align-items: center;
   margin: auto;
   width: 75%;
-  height: 80px;
+  height: 100%;
   background: #ffffff;
   border: 2px solid transparent;
   border-right: none;
@@ -36,22 +68,23 @@
   justify-content: center;
   align-items: center;
   width: 25%;
-  height: 80px;
+  height: 100%;
   color: #fff;
   background-color: #136ae4;
   font-size: 19px;
   font-weight: 700;
   cursor: pointer;
   border-radius: 0px 12px 12px 0px;
+  border-color: #cfcfcf;
+  border: 2px solid transparent;
+  border-left: none;
 }
 
-.form-container {
-  height: 20%;
-}
+/* IMG CONTAINER */
 
 .img-container {
   padding: 20px 10%;
-  height: 80%;
+  height: 100%;
   overflow-y: scroll;
   scroll-snap-type: y mandatory;
   scroll-padding: 1rem;
@@ -61,8 +94,4 @@
   display: grid;
   gap: 20px;
   grid-template-columns: repeat(auto-fit, minmax(min(300px, 100%), 1fr));
-}
-
-.img-grid-item {
-  width: 100%;
 }
