--- a/src/pages/YoutubeDisplayer/YoutubeDisplayer.css
+++ b/src/pages/YoutubeDisplayer/YoutubeDisplayer.css
@@ -85,9 +85,7 @@ h1 {
 .img-container {
   padding: 20px 10%;
   height: 100%;
-  overflow-y: scroll;
-  scroll-snap-type: y mandatory;
-  scroll-padding: 1rem;
+  overflow-y: auto;
 }
 
 .img-grid {
