--- a/src/components/ImgPreview/PreviewModal/ImgPreviewModal.css
+++ b/src/components/ImgPreview/PreviewModal/ImgPreviewModal.css
@@ -12,7 +12,8 @@
 
 .preview-modal {
   border-radius: 8px;
-  padding: 20px;
+  width: 80vw;
+  height: 80vh;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   background-color: #f2f2f2;
   position: relative;
@@ -30,14 +31,37 @@
 
 .preview-modal-content {
   display: grid;
+  gap: 20px;
+  padding: 20px;
   grid-template-columns: 1fr 1fr;
+  height: 100%;
+  width: 100%;
 }
 
 .preview-youtube-data {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-left: 20px;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  width: 100%;
+}
+
+.preview-youtube-video {
+  width: 100%;
+  height: 100%;
+}
+
+.preview-youtube-data-title {
+  overflow-y: auto;
+}
+
+.preview-youtube-data-description {
+  overflow: auto; /* Hide overflowing text */
+  max-height: 520px;
+  max-width: 100%;
+}
+
+.preview-youtube-data-description p {
+  word-wrap: break-word;
+  max-width: 100%;
 }
 
 .preview-icon {
