--- a/src/components/ImgPreview/PreviewModal/ImgPreviewModal.css
+++ b/src/components/ImgPreview/PreviewModal/ImgPreviewModal.css
@@ -29,42 +29,37 @@
   margin-right: 10px;
 }
 
-.preview-modal-content {
-  display: grid;
-  gap: 20px;
-  padding: 20px;
-  grid-template-columns: 1fr 1fr;
-  height: 100%;
-  width: 100%;
+.preview-icon {
+  font-size: 20px;
+  padding: 0;
 }
 
-.preview-youtube-data {
+.preview-modal-content {
   display: grid;
-  grid-template-rows: auto 1fr;
+  position: absolute;
+  gap: 10px;
+  padding: 20px;
+  grid-template-columns: 6fr 5fr;
+  grid-template-rows: auto 8fr;
+  height: 100%;
   width: 100%;
 }
 
 .preview-youtube-video {
   width: 100%;
   height: 100%;
+  grid-row: span 2;
 }
 
 .preview-youtube-data-title {
-  overflow-y: auto;
+  overflow: auto;
 }
 
 .preview-youtube-data-description {
-  overflow: auto; /* Hide overflowing text */
-  max-height: 520px;
-  max-width: 100%;
+  overflow: auto;
 }
 
 .preview-youtube-data-description p {
   word-wrap: break-word;
   max-width: 100%;
-}
-
-.preview-icon {
-  font-size: 30px;
-  padding: 0;
 }
