--- a/src/pages/auth/Login/Login.css
+++ b/src/pages/auth/Login/Login.css
@@ -1,11 +1,11 @@
-.grid-form {
+.login-grid-form {
   display: grid;
   grid-template-rows: auto 1fr;
   width: 100%;
   height: 100%;
 }
 
-.header {
+.login-header {
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -15,26 +15,26 @@
   color: #eaeaea;
 }
 
-.text {
+.login-text {
   font-size: clamp(1.5rem, 4vw, 3rem);
   font-weight: 700;
 }
 
-.underline {
+.login-underline {
   width: 61px;
   height: 6px;
   background: white;
   border-radius: 9px;
 }
 
-.inputs {
+.login-inputs {
   display: flex;
   flex-direction: column;
   align-items: center;
   height: 100%;
 }
 
-.input-container {
+.login-input-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,7 +42,7 @@
   flex-grow: 1;
 }
 
-.input {
+.login-input {
   display: grid;
   grid-template-columns: 2fr 10fr;
   align-items: center;
@@ -52,14 +52,14 @@
   border-radius: 6px;
 }
 
-.input img {
+.login-input img {
   width: clamp(10px, 50%, 20px);
   height: auto;
   max-width: 100%;
   margin: auto;
 }
 
-.input input {
+.login-input input {
   height: 100%;
   width: 100%;
   background: transparent;
@@ -69,17 +69,17 @@
   font-size: clamp(16px, 2vw, 30px);
 }
 
-.forgot-password {
+.login-forgot-password {
   color: #797979;
   font-size: clamp(12px, 2vw, 19px);
 }
 
-.forgot-password span {
+.login-forgot-password span {
   color: aqua;
   cursor: pointer;
 }
 
-.submit-container {
+.login-submit-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -88,7 +88,7 @@
   margin: 50px 0px;
 }
 
-.submit {
+.login-submit {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -105,7 +105,7 @@
 
 /* Styles for small screens (up to 767px) */
 @media screen and (max-width: 767px) {
-  .container {
+  .login-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -118,7 +118,7 @@
 
 /* Styles for medium screens (768px to 1024px) */
 @media screen and (min-width: 768px) and (max-width: 1024px) {
-  .container {
+  .login-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -131,7 +131,7 @@
 
 /* Styles for large screens (1025px and above) */
 @media screen and (min-width: 1025px) {
-  .container {
+  .login-container {
     display: flex;
     align-items: center;
     justify-content: center;
