--- a/src/pages/auth/Login/Login.css
+++ b/src/pages/auth/Login/Login.css
@@ -96,7 +96,7 @@
   height: 100%;
   padding: 10px;
   color: #fff;
-  background-color: #4c00b4;
+  background-color: #136ae4;
   border-radius: 50px;
   font-size: clamp(12px, 2vw, 19px);
   font-weight: 700;
