--- a/src/pages/auth/PasswordRecovery/PasswordRecovery.css
+++ b/src/pages/auth/PasswordRecovery/PasswordRecovery.css
@@ -74,15 +74,14 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  gap: 30px;
-  margin: 50px 0px;
+  padding-bottom: 20px;
 }
 
 .pwd-recovery-submit {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40%;
+  width: 80%;
   height: 100%;
   padding: 10px;
   color: #fff;
