--- a/src/pages/auth/Login/Login.css
+++ b/src/pages/auth/Login/Login.css
@@ -84,8 +84,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  gap: 30px;
-  margin: 50px 0px;
+  padding: 10px 0px;
 }
 
 .login-submit {
